# spacenote-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  justfile  pyproject.toml  test_telegram.py
docs/: api.md  architecture.md  concepts.md
src/spacenote/: app.py  config.py  errors.py  logging.py  main.py  utils.py
src/spacenote/core/: core.py  db.py  pagination.py
src/spacenote/core/modules/access/: service.py
src/spacenote/core/modules/attachment/: models.py  service.py  storage.py  utils.py
src/spacenote/core/modules/comment/: models.py  service.py
src/spacenote/core/modules/counter/: models.py  service.py
src/spacenote/core/modules/export/: models.py  service.py
src/spacenote/core/modules/field/: models.py  service.py  validator_types.py  validators.py
src/spacenote/core/modules/filter/: adhoc.py  models.py  query_builder.py  service.py  validators.py
src/spacenote/core/modules/image/: __init__.py  exif.py  image.py  preview.py  processor.py  service.py  utils.py
src/spacenote/core/modules/llm/: models.py  prompts.py  service.py  utils.py
src/spacenote/core/modules/note/: models.py  service.py
src/spacenote/core/modules/session/: models.py  service.py
src/spacenote/core/modules/space/: models.py  service.py
src/spacenote/core/modules/telegram/: models.py  renderer.py  rendering.py  sender.py  service.py  test_data.py  utils.py
src/spacenote/core/modules/user/: models.py  service.py  validators.py
src/spacenote/web/: deps.py  error_handlers.py  openapi.py  runner.py  server.py
src/spacenote/web/routers/: __init__.py  attachments.py  auth.py  comments.py  export.py  fields.py  filters.py  images.py  llm.py  metadata.py  notes.py  profile.py  spaces.py  telegram.py  users.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_field_validators.py
tests/unit/attachment/: test_utils.py
tests/unit/field/validators/: __init__.py  test_datetime.py  test_image.py  test_select.py  test_string_choice.py  test_tags.py  test_user.py
tests/unit/filter/: __init__.py  test_adhoc.py  test_query_builder.py  test_validators.py
